--- a/note_app/src/assets/style/style.scss
+++ b/note_app/src/assets/style/style.scss
@@ -23,7 +23,8 @@
   //button
   .btn{
     &_edit{
-      border:1px solid #eee;
+      background-color: transparent;
+      border: 2px solid rgba(0, 0, 0, 0.3);
       padding-top:5px;
       box-sizing: border-box;
 
@@ -335,8 +336,11 @@
 
     .content_txt{
       width:100%;
+      position: relative;
+      height: calc(100% - 50px);
+
       div{
-        float: right;
+  
         margin-right: 10px;
         padding-top:15px;
         background-color: $color_gray;
@@ -353,15 +357,32 @@
         }
       }
       .btn_edit{
-        float: right;
-        margin-right: 10px;
-        padding-top:15px;
-        background-color: $color_light_gray;
-        border: 2px solid rgba(0,0,0,0.3);
+        bottom:20px;
+        right: 15px;
+        margin-right: 0;
+        padding-top:12.5px;
+        background-color: transparent;
+        border: 0px solid rgba(0,0,0,0.3);
         display: inline-block;
-        @include size(91.2px,61.64px);
-        border-radius: 3px;
+        @include size(91.2px,50px);
+        border-radius: 8px;
         text-align: center;
+        position: absolute;
+        background-color: $point_color;
+        color:white;
+        &:hover{
+          bottom:25px;
+          transition: all linear 0.5s;
+
+        }
+        &:last-child{
+          right: 111px;
+          color:$point_color;
+          border: 0px;
+          border-bottom: 1px solid $point_color;
+          border-radius: 0;
+          background-color: transparent;
+        }
       }
     
     }
@@ -396,17 +417,21 @@
      
     }
     .memo_box{
-      position: relative;
+      position: absolute;
+      left:50%;
+      margin-left: calc(-672px / 2);
       @include size(35%,450px);
       box-sizing: border-box;
-      margin-top:225px;
+      top:calc(50% - (35% / 2));
       background:   $main_color;
+      border-radius: 8px;
       textarea{
         display: inline-block;
         height:300px;
         word-break: break-word;
         background: $main_color;
         padding:10px;
+        box-sizing: border-box;
       }
       .color_gray{
         clear: both;
