컬러파레트 변경 및 스타일 수정중

--- a/note_app/src/assets/style/data.css
+++ b/note_app/src/assets/style/data.css
@@ -1,2 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Permanent+Marker&display=swap");
-/*# sourceMappingURL=data.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Permanent+Marker&display=swap");/*# sourceMappingURL=data.css.map */
