--- a/note_app/src/assets/style/data.scss
+++ b/note_app/src/assets/style/data.scss
@@ -1,11 +1,13 @@
 //color
-$main_color:#AADCF5;
-$color_light_black:#495057;
-$color_black:#282C30;
+$main_color:#c3f0ca;
+$color_light_black:#594a4e;
+$color_black:#33272a;
 $color_light_gray:#E1E4E7;
 $color_gray:#4f545a;
-$point_color:#419C9E;
-
+$point_color:#ff8ba7;
+$back_color: #faeee7;
+$sub_color:#ffc6c7;
+$memo_color: #fffffe;
 
 //font-family
 // @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
