--- a/note_app/src/assets/style/reset.css
+++ b/note_app/src/assets/style/reset.css
@@ -26,5 +26,4 @@ button {
 svg {
   vertical-align: middle;
   margin-top: -4px;
-}
-/*# sourceMappingURL=reset.css.map */
+}/*# sourceMappingURL=reset.css.map */
