--- a/note_app/src/assets/style/style.css
+++ b/note_app/src/assets/style/style.css
@@ -34,11 +34,11 @@ svg {
 }
 
 .color_main {
-  color: #AADCF5 !important;
+  color: #c3f0ca !important;
 }
 
 .color_point {
-  color: #419C9E !important;
+  color: #c3f0ca !important;
 }
 
 .color_light_gray {
@@ -50,23 +50,21 @@ svg {
 }
 
 input:focus {
-  outline: 1px solid #AADCF5;
+  outline: 1px solid #c3f0ca;
 }
 
 .btn_edit {
   background-color: transparent;
   border: 2px solid rgba(0, 0, 0, 0.3);
   padding-top: 5px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 .btn_edit span {
   font-size: 0.85rem;
 }
 
 body, html {
-  background-color: #419C9E;
+  background-color: #faeee7;
 }
 
 ::-webkit-scrollbar {
@@ -85,7 +83,6 @@ body, html {
   left: 0;
   background: rgba(0, 0, 0, 0.8);
 }
-
 .notification_box aside {
   width: 30%;
   height: 400px;
@@ -96,7 +93,6 @@ body, html {
   background: #fff;
   position: relative;
 }
-
 .notification_box aside span > button {
   width: 50px;
   height: 50px;
@@ -107,52 +103,41 @@ body, html {
   right: 10px;
   top: 10px;
 }
-
 .notification_box aside .notification_icon {
   height: 245px;
   background: firebrick;
   text-align: center;
   color: white;
 }
-
 .notification_box aside .notification_icon svg {
   width: 100%;
   height: 50%;
   margin-top: 50px;
   color: white;
 }
-
 .notification_box aside .notification_icon h1 {
   margin-top: 15px;
   font-size: 1.5rem;
 }
-
 .notification_box aside .notification_content {
   height: 100px;
   text-align: center;
   font-weight: 600;
   font-size: 1.35rem;
   padding-top: 15px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 .notification_box aside .notification_content p {
-  color: #495057;
+  color: #594a4e;
   font-size: 1.2rem;
 }
-
 .notification_box aside .notification_btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .notification_box aside .notification_btn div {
   width: 50%;
   height: 60px;
 }
-
 .notification_box aside .notification_btn button {
   font-size: 1.25rem;
   font-weight: bold;
@@ -161,7 +146,6 @@ body, html {
   border: none;
   border-radius: 0;
 }
-
 .notification_box aside .notification_btn button:last-child {
   color: firebrick;
   border-left: 1px solid #4f545a;
@@ -170,69 +154,51 @@ body, html {
 .nav_box {
   width: 60%;
   height: 70px;
-  -webkit-box-shadow: 5px 5px 5px #495057;
-          box-shadow: 5px 5px 5px #495057;
+  box-shadow: 2.5px 2.5px 2.5px #594a4e;
   margin-left: 20%;
   margin-top: 50px;
-  background: #EBB390;
-  border: 30px solid #EBB390;
+  background: #ffc6c7;
+  border: 30px solid #ffc6c7;
   border-top-left-radius: 100px;
   border-top-right-radius: 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
-
 .nav_box h1 {
   font-size: 3.5rem;
   text-align: center;
-  color: #333;
+  color: #33272a;
+  margin-top: 10px;
 }
 
 .edit_bar_box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  box-sizing: border-box;
+  justify-content: space-between;
 }
-
 .edit_bar_box .edit_bar {
   margin-left: 0;
   margin-top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .edit_bar_box .edit_bar span {
   line-height: 40px;
   margin-left: 5px;
 }
-
 .edit_bar_box .edit_bar li {
   margin-right: 15px;
   width: 90px;
   height: 90px;
-  background-color: #b15115c9;
+  background-color: #ff8ba7;
   border-radius: 100%;
   overflow: hidden;
-  -webkit-box-shadow: 2px 2px 2px #495057;
-          box-shadow: 2px 2px 2px #495057;
+  box-shadow: 2px 2px 2px #594a4e;
 }
-
 .edit_bar_box .edit_bar li:hover {
   margin-top: -3px;
-  -webkit-transition: all linear 0.3s;
   transition: all linear 0.3s;
   background-color: rgba(235, 179, 144, 0.788);
 }
-
 .edit_bar_box .edit_bar li button {
   border: none;
   width: 95%;
@@ -240,71 +206,56 @@ body, html {
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 100%;
   padding: 3px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  color: #333;
+  box-sizing: border-box;
+  color: #33272a;
   border: 2px solid rgba(150, 0, 0, 0.3);
 }
-
 .edit_bar_box .edit_bar li span {
   display: block;
   line-height: 1.5;
   font-weight: bold;
   position: relative;
 }
-
 .edit_bar_box .edit_bar li svg {
   margin-top: 5px;
 }
-
 .edit_bar_box .edit_bar li.axent button {
-  color: #419C9E;
+  color: #ff8ba7;
 }
-
 .edit_bar_box .edit_bar li.axent svg {
-  color: #419C9E;
+  color: #ff8ba7;
 }
-
 .edit_bar_box .search_bar {
   height: 48px;
   border: 1px solid #E1E4E7;
   border-radius: 5px;
 }
-
 .edit_bar_box .search_bar svg {
   margin-top: 0;
 }
-
 .edit_bar_box .search_bar input {
   width: 280px;
   height: 100%;
   background: none;
   border: none;
   padding: 5px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .home_content {
-  background-color: antiquewhite;
-  border: 30px solid #EBB390;
+  background-color: #faeee7;
+  border: 30px solid #ffc6c7;
   width: 60%;
   height: 70vh;
   margin-left: 20%;
-  -webkit-box-shadow: 5px 5px 5px #495057;
-          box-shadow: 5px 5px 5px #495057;
+  box-shadow: 2.5px 2.5px 2.5px #594a4e;
   overflow: auto;
 }
 
 .list_box_square {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  flex-wrap: wrap;
+  align-items: baseline;
   padding: 0 6%;
 }
 
@@ -312,17 +263,14 @@ body, html {
   cursor: pointer;
   width: 310px;
   height: auto;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  background: #AADCF5;
+  box-sizing: border-box;
+  background: #fffffe;
   overflow: hidden;
   margin-left: 17px;
   margin-top: 15px;
-  border-radius: 2px;
-  -webkit-box-shadow: 3px 3px 3px #495057;
-          box-shadow: 3px 3px 3px #495057;
+  border-radius: 6px;
+  box-shadow: 3px 3px 3px #594a4e;
 }
-
 .memo_box .label_box {
   background: rgba(255, 255, 255, 0.3);
   overflow: hidden;
@@ -331,64 +279,49 @@ body, html {
   text-indent: 15px;
   color: rgba(0, 0, 0, 0.3);
   font-size: 1.2rem;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  justify-content: space-between;
   display: flex;
 }
-
 .memo_box .label_box svg {
   padding-right: 5px;
 }
-
 .memo_box .memo_content_box {
   padding: 15px 3.5%;
   padding-bottom: 30px;
   padding-top: 15px;
 }
-
 .memo_box .memo_content_box > div:last-child {
   margin-top: 30px;
   text-align: right;
 }
-
-.memo_box input[type='checkbox'] {
+.memo_box input[type=checkbox] {
   border: 1px solid #4f545a;
-  -webkit-box-shadow: 2px 2px 2px #AADCF5;
-          box-shadow: 2px 2px 2px #AADCF5;
+  box-shadow: 2px 2px 2px #c3f0ca;
 }
-
 .memo_box .contents_inputs {
   display: inline-block;
   width: 100%;
   outline: none;
   border: none;
 }
-
 .memo_box .content_txt {
   width: 100%;
   position: relative;
   height: calc(100% - 50px);
 }
-
 .memo_box .content_txt div {
   margin-right: 10px;
   padding-top: 15px;
   background-color: #4f545a;
   border: 2px solid rgba(0, 0, 0, 0.3);
 }
-
 .memo_box .content_txt div:last-child {
   margin-right: 10px;
 }
-
 .memo_box .content_txt button.active {
-  background-color: #419C9E;
+  background-color: #ff8ba7;
   color: white;
 }
-
 .memo_box .content_txt .btn_edit {
   bottom: 20px;
   right: 15px;
@@ -402,40 +335,30 @@ body, html {
   border-radius: 8px;
   text-align: center;
   position: absolute;
-  background-color: #419C9E;
+  background-color: #ff8ba7;
   color: white;
 }
-
 .memo_box .content_txt .btn_edit:hover {
   bottom: 25px;
-  -webkit-transition: all linear 0.5s;
   transition: all linear 0.5s;
 }
-
 .memo_box .content_txt .btn_edit:last-child {
   right: 111px;
-  color: #419C9E;
+  color: #ff8ba7;
   border: 0px;
-  border-bottom: 1px solid #419C9E;
+  border-bottom: 1px solid #ff8ba7;
   border-radius: 0;
   background-color: transparent;
 }
-
 .memo_box .title_box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   height: 50px;
   background: rgba(255, 255, 255, 0.2);
 }
-
 .memo_box .title_box svg {
   margin-top: 0px;
 }
-
 .memo_box .title_box p {
   color: #E1E4E7;
   cursor: pointer;
@@ -448,45 +371,34 @@ body, html {
   background: rgba(0, 0, 0, 0.5);
   left: 0;
   top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .inputs_box .title_box svg {
   margin-top: 15px;
 }
-
 .inputs_box .memo_box {
   position: absolute;
   left: 50%;
-  margin-left: calc(-672px / 2);
+  margin-left: -336px;
   width: 35%;
   height: 450px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  top: calc(50% - (35% / 2));
-  background: #AADCF5;
+  box-sizing: border-box;
+  top: 32.5%;
+  background: #fffffe;
   border-radius: 8px;
 }
-
 .inputs_box .memo_box textarea {
   display: inline-block;
   height: 300px;
   word-break: break-word;
-  background: #AADCF5;
+  background: #fffffe;
   padding: 10px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 .inputs_box .memo_box .color_gray {
   clear: both;
   position: absolute;
   bottom: 20px;
   left: 15px;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
